# HOMS_SignalProcessing

./: CMakeLists.txt  README.md  data_demo.mat  demo.m
src/: CMakeLists.txt  higherOrderMumShah1D.m  plotMumShah.m
src/cpp/: ArmadilloConverter.cpp  CMakeLists.txt  CalcGivensAngles.cpp  Compute1rErrors.cpp  FindBestPartition.cpp  HOMS.cpp  HOMStests.cpp  HelperStructs.cpp  HelperStructs.h  HigherOrderMS1D_wrapper.cpp  HigherOrderMS_1D.cpp  HigherOrderMS_1D.h  Interval.cpp  Interval.h  PcwPolynomialPartitioning.cpp  PcwPolynomialPartitioning.h  PcwSmoothPartitioning.cpp  PcwSmoothPartitioning.h  PcwSmoothPartitioningBase.cpp  PcwSmoothPartitioningBase.h  ReconstructionFromPartition.cpp  build.m
